Fix alert text alignment

--- a/web-frontend/modules/core/assets/scss/components/alert.scss
+++ b/web-frontend/modules/core/assets/scss/components/alert.scss
@@ -44,7 +44,6 @@
   padding: 0;
   flex: 1 1 auto;
   font-size: 12px;
-  text-align: justify;
 
   p {
     margin: 0;
